# snowplow-haskell-tracker

./: README.md  snowplow-haskell-tracker.cabal  stack.yaml
app/: Main.hs
src/Iglu/: Core.hs
src/Snowplow/: Emitter.hs  Event.hs  Internal.hs  Tracker.hs
