name:                snowplow-haskell-tracker
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/chuwy/snowplow-haskell-tracker#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Parkhomenko
maintainer:          anton@snowplowanalytics.com
copyright:           2017 Snowplow Analytics Ltd.
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Snowplow.Tracker
  build-depends:       base >= 4.7 && < 5,
                       aeson >=0.8,
                       exceptions,
                       transformers,
                       http-conduit >= 2.1.8,
                       BoundedChan,
                       resourcet,
                       text >=1.2,
                       time >=1.4,
                       unordered-containers
  default-language:    Haskell2010

executable snowplow-haskell-tracker-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , snowplow-haskell-tracker
  default-language:    Haskell2010

test-suite snowplow-haskell-tracker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , snowplow-haskell-tracker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chuwy/snowplow-haskell-tracker
