name:                snowplow-haskell-tracker
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/snowplow/snowplow-haskell-tracker#readme
license:             Apache
license-file:        LICENSE.txt
author:              Anton Parkhomenko
maintainer:          anton@snowplowanalytics.com
copyright:           2017 Snowplow Analytics Ltd.
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.24.2.0

library
  hs-source-dirs:      src
  exposed-modules:     Snowplow.Tracker,
                       Snowplow.Emitter,
                       Snowplow.Internal,
                       Iglu.Core,
                       Snowplow.Event
  build-depends:       base >= 4.9.1.0 && < 5,
                       bytestring >= 0.10.8.1,
                       base64-bytestring >= 1.0.0.1,
                       vector >= 0.12.0.1,
                       scientific >= 0.3.5.2,
                       uuid >= 1.3.13,
                       aeson >=0.8,
                       mtl >= 2.2.1,
                       either >= 4.4.1.1,
                       http-types >= 0.9.1,
                       random >= 1.1,
                       exceptions,
                       transformers,
                       http-conduit >= 2.1.8,
                       BoundedChan,
                       resourcet,
                       text >=1.2,
                       time >=1.4,
                       unordered-containers
  default-language:    Haskell2010

executable snowplow-haskell-tracker-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , snowplow-haskell-tracker
                     , text >=1.2
  default-language:    Haskell2010

test-suite snowplow-haskell-tracker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , snowplow-haskell-tracker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/snowplow/snowplow-haskell-tracker
